# SwissSpeed

./: Collector.py  DBHandler.py  DatexParser.py  Doc.txt  FetchData.py  Main.py  Part1_Documentation.md  README.md  SoapClient.py  SwissSpeed.db  WriteData.py
Part1/: DBHandler.py  Dashboard.html  DatexParser.py  SoapClient.py  traffic_dashboard.service
Part1/Docs/: Part1_Documentation.md  SwissSpeed_Diagram.drawio
Part1/UI/: README.md  UI.py  data.db  pyproject.toml
Part1/UI/scripts/: setup.ps1  setup.sh
Part1/UI/static/css/: styles.css
Part1/UI/static/js/: main.js
Part1/UI/templates/: index.html
Part2/: DBHandler.py  DashboardServer.py  Main.py  traffic_dashboard.service
Part2/Docs/: Part1_Documentation.md  Part2_Documentation.md
